--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<title>Course</title>
+<title>Index</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="Course Project">
@@ -333,7 +333,7 @@
 				<div class="row">
 
 					<!-- Footer Column - About -->
-					<div class="col-lg-3 footer_col">
+					<div class="col-lg-4 footer_col">
 
 						<!-- Logo -->
 						<div class="logo_container">
@@ -349,7 +349,7 @@
 
 					<!-- Footer Column - Menu -->
 
-					<div class="col-lg-3 footer_col">
+					<div class="col-lg-4 footer_col">
 						<div class="footer_column_title">Menu</div>
 						<div class="footer_column_content">
 							<ul>
@@ -368,7 +368,7 @@
 
 					<!-- Footer Column - Contact -->
 
-					<div class="col-lg-3 footer_col">
+					<div class="col-lg-4 footer_col">
 						<div class="footer_column_title">Contacto</div>
 						<div class="footer_column_content">
 							<ul>
@@ -393,22 +393,7 @@
 
 			<!-- Footer Copyright -->
 
-			<div class="footer_bar d-flex flex-column flex-sm-row align-items-center">
-				<div class="footer_copyright">
-					<span><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></span>
-				</div>
-				<div class="footer_social ml-sm-auto">
-					<ul class="menu_social">
-						<li class="menu_social_item"><a href="#"><i class="fab fa-pinterest"></i></a></li>
-						<li class="menu_social_item"><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-						<li class="menu_social_item"><a href="#"><i class="fab fa-instagram"></i></a></li>
-						<li class="menu_social_item"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-						<li class="menu_social_item"><a href="#"><i class="fab fa-twitter"></i></a></li>
-					</ul>
-				</div>
-			</div>
+			
 
 		</div>
 	</footer>
