--- a/Cursos.html
+++ b/Cursos.html
@@ -31,17 +31,17 @@
 			<nav class="main_nav_container">
 				<div class="main_nav">
 					<ul class="main_nav_list">
-						<li class="main_nav_item"><a href="#">Inicio</a></li>
-						<li class="main_nav_item"><a href="courses.html">Cursos</a></li>
-						<li class="main_nav_item"><a href="contact.html">Docentes</a></li>
-						<li class="main_nav_item"><a href="#">Contacto</a></li>
+						<li class="main_nav_item"><a href="index.html">Inicio</a></li>
+						<li class="main_nav_item"><a href="Cursos.html">Cursos</a></li>
+						<li class="main_nav_item"><a href="Maestros.html">Docentes</a></li>
+						<li class="main_nav_item"><a href="index.html">Contacto</a></li>
 					</ul>
 				</div>
 			</nav>
 		</div>
 		<div class="header_side d-flex flex-row justify-content-center align-items-center color: cornsilk;">
 			
-			<li class="main_nav_item" color: cornsilk; ><a href="#">Iniciar sesion</a></li>
+			<li class="main_nav_item" color: cornsilk; ><a href="login.html">Iniciar sesion</a></li>
 		</div>
 
 		<!-- Hamburger -->
@@ -60,6 +60,20 @@
 		</div>
 
 		<!-- Menu Items -->
+
+		<div class="menu_inner menu_mm">
+			<div class="menu menu_mm">
+				<ul class="menu_list menu_mm">
+					<li class="menu_item menu_mm"><a href="index.html">Inicio</a></li>
+					<li class="menu_item menu_mm"><a href="Cursos.html">Cursos</a></li>
+					<li class="menu_item menu_mm"><a href="Maestros.html">Docentes</a></li>
+					<li class="menu_item menu_mm"><a href="index.html">Contacto</a></li>
+					<li class="menu_item menu_mm"><a href="login.html">Iniciar sesion</a></li>
+				</ul>
+
+			</div>
+
+		</div>
 		
 
 	</div>
@@ -94,7 +108,7 @@
 					<div class="card">
 						<img class="card-img-top" src="images/course_1.jpg" alt="https://unsplash.com/@kellybrito">
 						<div class="card-body text-center">
-							<div class="card-title"><a href="courses.html">Curso de pesquera</a></div>
+							<div class="card-title"><a href="Contenido.html">Curso de pesquera</a></div>
 							<div class="card-text"></div>
 						</div>
 						<div class="price_box d-flex flex-row align-items-center">
@@ -112,7 +126,7 @@
 					<div class="card">
 						<img class="card-img-top" src="images/course_2.jpg" alt="https://unsplash.com/@cikstefan">
 						<div class="card-body text-center">
-							<div class="card-title"><a href="courses.html">Curso de biologia</a></div>
+							<div class="card-title"><a href="Contenido.html">Curso de biologia</a></div>
 							
 						</div>
 						<div class="price_box d-flex flex-row align-items-center">
