--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
 			<nav class="main_nav_container">
 				<div class="main_nav">
 					<ul class="main_nav_list">
-						<li class="main_nav_item"><a href="#">Inicio</a></li>
-						<li class="main_nav_item"><a href="courses.html">Cursos</a></li>
-						<li class="main_nav_item"><a href="contact.html">Docentes</a></li>
-						<li class="main_nav_item"><a href="#">Contacto</a></li>
+						<li class="main_nav_item"><a href="index.html">Inicio</a></li>
+						<li class="main_nav_item"><a href="Cursos.html">Cursos</a></li>
+						<li class="main_nav_item"><a href="Maestros.html">Docentes</a></li>
+						<li class="main_nav_item"><a href="index.html">Contacto</a></li>
 					</ul>
 				</div>
 			</nav>
 		</div>
 		<div class="header_side d-flex flex-row justify-content-center align-items-center color: cornsilk;">
 			
-			<li class="main_nav_item" color: cornsilk; ><a href="#">Iniciar sesion</a></li>
+			<li class="main_nav_item" color: cornsilk; ><a href="login.html">Iniciar sesion</a></li>
 		</div>
 
 		<!-- Hamburger -->
@@ -66,27 +66,13 @@
 		<div class="menu_inner menu_mm">
 			<div class="menu menu_mm">
 				<ul class="menu_list menu_mm">
-					<li class="menu_item menu_mm"><a href="#">Home</a></li>
-					<li class="menu_item menu_mm"><a href="#">About us</a></li>
-					<li class="menu_item menu_mm"><a href="courses.html">Courses</a></li>
-					<li class="menu_item menu_mm"><a href="elements.html">Elements</a></li>
-					<li class="menu_item menu_mm"><a href="news.html">News</a></li>
-					<li class="menu_item menu_mm"><a href="contact.html">Contact</a></li>
+					<li class="menu_item menu_mm"><a href="index.html">Inicio</a></li>
+					<li class="menu_item menu_mm"><a href="Cursos.html">Cursos</a></li>
+					<li class="menu_item menu_mm"><a href="Maestros.html">Docentes</a></li>
+					<li class="menu_item menu_mm"><a href="index.html">Contacto</a></li>
+					<li class="menu_item menu_mm"><a href="login.html">Iniciar sesion</a></li>
 				</ul>
 
-				<!-- Menu Social -->
-				
-				<div class="menu_social_container menu_mm">
-					<ul class="menu_social menu_mm">
-						<li class="menu_social_item menu_mm"><a href="#"><i class="fab fa-pinterest"></i></a></li>
-						<li class="menu_social_item menu_mm"><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-						<li class="menu_social_item menu_mm"><a href="#"><i class="fab fa-instagram"></i></a></li>
-						<li class="menu_social_item menu_mm"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-						<li class="menu_social_item menu_mm"><a href="#"><i class="fab fa-twitter"></i></a></li>
-					</ul>
-				</div>
-
-				<div class="menu_copyright menu_mm">Colorlib All rights reserved</div>
 			</div>
 
 		</div>
