--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 						<div class="register_content text-center">
 							<h1 class="register_title">Registrate y disfruta de todo el contenido </h1>
 							<p class="register_text">Solo podras ver todo el contenido si te registras y eres aceptado.</p>
-							<div class="button button_1 register_button mx-auto trans_200"><a href="#">Registrate ahora</a></div>
+							<div class="button button_1 register_button mx-auto trans_200"><a href="login.html">Registrate ahora</a></div>
 						</div>
 					</div>
 
