--- a/Contenido.html
+++ b/Contenido.html
@@ -13,6 +13,7 @@
 </head>
 <body>
 
+
 <div class="super_container">
 
 	<!-- Header -->
@@ -100,6 +101,7 @@
 				<div class="row">
 					<div class="col-lg-12">
 						<div class="elements_title">Contenido del curso</div>
+						
 					</div>
 				</div>
 
@@ -116,7 +118,7 @@
 							<div class="accordion_container">
 								<div class="accordion d-flex flex-row align-items-center"> Nombre del tema.</div>
 								<div class="accordion_panel">
-									<p>Contenido del tema.</p>
+									<p>Pdf - git - google coolab - RStudio Onlink.</p>
 								</div>
 							</div>
 
