--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 					<div class="card">
 						<img class="card-img-top" src="images/course_2.jpg" alt="https://unsplash.com/@cikstefan">
 						<div class="card-body text-center">
-							<div class="card-title"><a href="courses.html">Biologia</a></div>
+							<div class="card-title"><a href="Contenido.html">Biologia</a></div>
 							<div class="card-text">Datos exploratorios, grafias, etc...</div>
 						</div>
 						<div class="price_box d-flex flex-row align-items-center">
