the view "N visits" and "view courses" is created
the views for these two modules are finished

--- a/N vistas.html
+++ b/N vistas.html
@@ -60,7 +60,7 @@
       <div class="position-sticky pt-3">
         <ul class="nav flex-column">
           <li class="nav-item">
-            <a class="nav-link  active" href="Crear curso.html">
+            <a class="nav-link" href="Crear curso.html">
                <span data-feather="home"></span>
                Crear Curso
             </a>
@@ -72,7 +72,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="N vistas.html">
+            <a class="nav-link active" href="N vistas.html">
               <span data-feather="bar-chart-2"></span>
               Numero de vistas
             </a>
@@ -88,7 +88,7 @@
 
     <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
         <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-            <h1 class="h2">Crear curso</h1>
+            <h1 class="h2">Numero de visitas a cada curso</h1>
         </div>
 
     <div class="table-responsive">
@@ -96,37 +96,17 @@
           <thead>
             <tr>
               <th>#</th>
-              <th>Nombre del tema</th>
-              <th>R online</th>
-              <th>Google Colab</th>
-              <th>Git</th>
-              <th>PDF</th>
-              <th>Eliminar</th>
-              <th>+ Temas</th>
+              <th>Nombre del Curso</th>
+              <th>Visitas</th>
             </tr>
           </thead>
           <tbody>
             <tr>
               <td>1</td>
-              <td><input type="text" class="form-control" id="validationCustom02" placeholder="Nombre del tema" required></td>
-              <td><input type="text" class="form-control" id="validationCustom03" placeholder="Link a RStudio online" required></td>
-              <td><input type="text" class="form-control" id="validationCustom05" placeholder="Link a Google Colab" required></td>
-              <td><input type="text" class="form-control" id="validationCustom05" placeholder="Link a Git" required></td>
-              <td><button  class="btn btn-primary" type="submit">Cargar</button></td>
-              <td><button type="button" class="btn btn-danger">-</button></td>
-              <td><button type="button" class="btn btn-success">+</button></td>
+              <td>Nombre del curso</td>
+              <td>2</td>
             </tr>
 
-            <tr>
-                <td>2</td>
-                <td><input type="text" class="form-control" id="validationCustom02" placeholder="Nombre del tema" required></td>
-                <td><input type="text" class="form-control" id="validationCustom03" placeholder="Link a RStudio online" required></td>
-                <td><input type="text" class="form-control" id="validationCustom05" placeholder="Link a Google Colab" required></td>
-                <td><input type="text" class="form-control" id="validationCustom05" placeholder="Link a Git" required></td>
-                <td><button  class="btn btn-primary" type="submit">Cargar</button></td>
-                <td><button type="button" class="btn btn-danger">-</button></td>
-                <td><button type="button" class="btn btn-success">+</button></td>
-            </tr>
           </tbody>
         </table>
     </div>
