--- a/Crear Curso.html
+++ b/Crear Curso.html
@@ -97,6 +97,7 @@
                   <th>Google Colab</th>
                   <th>Git</th>
                   <th>PDF</th>
+                  <th>VSL</th>
                   <th>Eliminar</th>
                   <th>+ Temas</th>
                 </tr>
@@ -110,6 +111,12 @@
                   <td><input type="text" class="form-control" id="validationCustom05" placeholder="Link a Google Colab" required></td>
                   <td><input type="text" class="form-control" id="validationCustom05" placeholder="Link a Git" required></td>
                   <td><button  class="btn btn-primary" type="submit">Cargar</button></td>
+                  <td>
+                    <div class="form-check form-switch">
+                      <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                      <label class="form-check-label" for="flexSwitchCheckDefault"></label>
+                    </div>
+                  </td>
                   <td><button type="button" class="btn btn-danger">-</button></td>
                   <td><button type="button" class="btn btn-success">+</button></td>
                 </tr>
@@ -121,6 +128,12 @@
                   <td><input type="text" class="form-control" id="validationCustom05" placeholder="Link a Google Colab" required></td>
                   <td><input type="text" class="form-control" id="validationCustom05" placeholder="Link a Git" required></td>
                   <td><button  class="btn btn-primary" type="submit">Cargar</button></td>
+                  <td>
+                    <div class="form-check form-switch">
+                      <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                      <label class="form-check-label" for="flexSwitchCheckDefault"></label>
+                    </div>
+                  </td>
                   <td><button type="button" class="btn btn-danger">-</button></td>
                   <td><button type="button" class="btn btn-success">+</button></td>
                 </tr>
