--- a/Ver cursos.html
+++ b/Ver cursos.html
@@ -106,9 +106,11 @@
                       Editar
                     </button>
 
+                    
+
                     <!-- Modal -->
                     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                      <div class="modal-dialog">
+                      <div class="modal-dialog modal-10000">
                         <div class="modal-content">
                             <div class="modal-header">
                               <h5 class="modal-title" id="exampleModalLabel">Nombre del curso</h5>
@@ -126,6 +128,7 @@
                                       <th>Google Colab</th>
                                       <th>Git</th>
                                       <th>PDF</th>
+                                      <th>VSL</th>
                                       <th>Eliminar</th>
                                       <th>+ Temas</th>
                                     </tr>
@@ -139,6 +142,12 @@
                                       <td><input type="text" class="form-control" id="validationCustom05" placeholder="Link a Google Colab" required></td>
                                       <td><input type="text" class="form-control" id="validationCustom05" placeholder="Link a Git" required></td>
                                       <td><button  class="btn btn-primary" type="submit">Cargar</button></td>
+                                      <td>
+                                        <div class="form-check form-switch">
+                                          <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                                          <label class="form-check-label" for="flexSwitchCheckDefault"></label>
+                                          </div>
+                                      </td>
                                       <td><button type="button" class="btn btn-danger">-</button></td>
                                       <td><button type="button" class="btn btn-success">+</button></td>
                                     </tr>
@@ -150,6 +159,12 @@
                                         <td><input type="text" class="form-control" id="validationCustom05" placeholder="Link a Google Colab" required></td>
                                         <td><input type="text" class="form-control" id="validationCustom05" placeholder="Link a Git" required></td>
                                         <td><button  class="btn btn-primary" type="submit">Cargar</button></td>
+                                        <td>
+                                        <div class="form-check form-switch">
+                                          <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                                          <label class="form-check-label" for="flexSwitchCheckDefault"></label>
+                                          </div>
+                                      </td>
                                         <td><button type="button" class="btn btn-danger">-</button></td>
                                         <td><button type="button" class="btn btn-success">+</button></td>
                                     </tr>
