--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 								<li class="main_nav_item"><a href="index.html">Inicio</a></li>
 								<li class="main_nav_item"><a href="Cursos.html">Cursos</a></li>
 								<li class="main_nav_item"><a href="Maestros.html">Docentes</a></li>
-								<li class="main_nav_item"><a href="index.html">Contacto</a></li>
+								<li class="main_nav_item"><a href="Publicaciones.html">Publicaciones</a></li>
 							</ul>
 						</div>
 					</nav>
@@ -69,7 +69,7 @@
 						<li class="menu_item menu_mm"><a href="index.html">Inicio</a></li>
 						<li class="menu_item menu_mm"><a href="Cursos.html">Cursos</a></li>
 						<li class="menu_item menu_mm"><a href="Maestros.html">Docentes</a></li>
-						<li class="menu_item menu_mm"><a href="index.html">Contacto</a></li>
+						<li class="menu_item menu_mm"><a href="Publicaciones.html">Publicaciones</a></li>
 						<li class="menu_item menu_mm"><a href="login.html">Iniciar sesion</a></li>
 					</ul>
 				</div>
