--- a/Publicaciones.html
+++ b/Publicaciones.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 	<head>
-		<title>Contenido</title>
+		<title>Publicaciones</title>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="description" content="Course Project">
@@ -81,7 +81,7 @@
 				</div>
 
 				<div class="home_content">
-					<h1>Nombre del curso</h1>
+					<h1>Publicaciones</h1>
 				</div>
 			</div>
 
@@ -95,9 +95,12 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-lg-12">
-								<div class="elements_title">Contenido del curso</div>
+								<div class="elements_title">Listado de Publicaciones</div>
 							</div>
 						</div>
+
+						<input id="search_form_category" class="input_field search_form_category" type="text" placeholder="Buscar">
+						
 
 						<div class="row pbars_accordions_container">
 
@@ -108,7 +111,7 @@
 							<div class="elements_accordions">
 
 								<div class="accordion_container">
-									<div class="accordion d-flex flex-row align-items-center"> Nombre del tema.</div>
+									<div class="accordion d-flex flex-row align-items-center"> Nombre de la publicacion / Nombre del autor.</div>
 									<div class="accordion_panel">
 										<p>Pdf - git - google coolab - RStudio Onlink.</p>
 									</div>
